[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
diesel = { version = "2.1", features = ["postgres", "r2d2"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"

[patch.crates-io]
mio = { git = "https://github.com/tokio-rs/mio.git", tag = "v0.8.11" }
