[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
diesel = { version = "2.1", features = ["postgres", "r2d2"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mio = "1"

[workspace]
members = ["backend", "contracts/contract1", "contracts/contract2"]

